--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576833404422196"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>Calculator</h1>
