--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div id="ad"></div>
-    <div id="name">Your Name</div>
+    <div id="name">Infinite</div>
     <script src="script.js"></script>
   </body>
 </html>
