--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
   <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576833404422196"
-     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>Calculator</h1>
@@ -40,6 +38,11 @@
       </div>
     </div>
     <div id="ad"></div>
+    <ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-L94BYTBha1kJWuc8"
+data-ad-width = "300"
+data-ad-height = "250"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <div id="name">Infinite</div>
     <script src="script.js"></script>
   </body>
